Handling in memory file protocol at boot level
update code to solve errors due to changes
devtools created/updated
updated test lib to ease testing